[project]
name = "timepin-lockbox"
version = "0.1.0"
description = "Time-delayed keypad PIN lock/unlock CLI using drand tlock encryption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
